2011-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Support BFS (befs) UUID.

	* grub-core/fs/afs.c (grub_afs_inode): Make small_data zero-size.
	(grub_afs_small_data_element_header): New struct.
	(grub_afs_read_inode): Read complete inode. Fix ino type while on it.
	(grub_afs_read_attribute) [MODE_BFS]: New function.
	(grub_afs_iterate_dir): Allocate for complete inode.
	(grub_afs_mount): Likewise.
	(grub_afs_uuid) [MODE_BFS]: New function.
	(grub_afs_fs) [MODE_BFS]: Add .uuid.

2011-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (read_device): Silence spurious warning.
	(zfs_unmount): Fix memory leak.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Support NTFS reparse points.

	* grub-core/fs/ntfs.c (list_file): Set symlink type when appropriate.
	(symlink_descriptor): New struct.
	(grub_ntfs_read_symlink): New function.
	(grub_ntfs_iterate_dir): Use grub_ntfs_read_symlink.
	(grub_ntfs_open): Likewise.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ntfs.h: Add GRUB_NTFS_ prefix. All users updated.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	fstest xnu_uuid subcommand.

	* grub-core/commands/xnu_uuid.c (libgrubkrn): Add
	grub-core/commands/xnu_uuid.c.
	* util/grub-fstest.c (CMD_XNU_UUID): New enum value.
	(fstest): Handle xnu_uuid.
	(options): Document xnu_uuid.
	(argp_parser): Parse xnu_uuid.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/xnu_uuid.c (grub_cmd_xnu_uuid): Support
	-l argument. Add newline at the end if printing.
	(GRUB_MOD_INIT): Document -l.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_uuid): Add missing field length.

2011-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	ZFS multi-device and version 33 support.

	* Makefile.util.def (libgrubkern): Add grub-core/fs/zfs/zfsinfo.c.
	* grub-core/fs/zfs/zfs.c (grub_zfs_device_desc): New struct.
	(grub_zfs_data): Add multidev-ice-related fields.